fix header and pagination overlap

--- a/style.css
+++ b/style.css
@@ -157,6 +157,7 @@ header {
   position: fixed;
   top: 0;
   width: 100%;
+  z-index: 9000;
 }
 
 nav {
